--- a/.github/workflows/terrafromBackend.yml
+++ b/.github/workflows/terrafromBackend.yml
@@ -7,28 +7,28 @@ jobs:
   terraform-backend:
     name: Terraform Backend S3
     runs-on: ubuntu-latest
-  steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Install Terraform
-      uses: hashicorp/setup-terraform@v3
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v3
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v3
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_ID}}
-        aws-region: "ap-south-1"
-    
-    - name: Initialize Terraform
-      run: terraform init
-      working-directory: Backend
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_ID }}
+          aws-region: "ap-south-1"
 
-    - name: Terraform Plan
-      run: terraform plan -out=tfbackendpaln.out
-      working-directory: Backend
+      - name: Initialize Terraform
+        run: terraform init
+        working-directory: Backend
 
-    - name: Terraform Apply
-      run : terraform apply -auto-approve tfbackendpaln.out
-      working-directory: Backend
+      - name: Terraform Plan
+        run: terraform plan -out=tfbackendplan.out
+        working-directory: Backend
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve tfbackendplan.out
+        working-directory: Backend
